--- a/CMS.properties
+++ b/CMS.properties
@@ -1,5 +1,5 @@
-#HSQL Database Engine 2.7.0
-#Mon Sep 16 02:42:12 UTC 2024
-modified=no
-tx_timestamp=556
-version=2.7.0
+#HSQL Database Engine 2.7.3
+#Mon Sep 16 02:04:22 BRT 2024
+modified=yes
+tx_timestamp=902
+version=2.7.3
