Reescrevendo porque parei de entender o que estava escrito

--- a/CMS.properties
+++ b/CMS.properties
@@ -1,5 +1,5 @@
-#HSQL Database Engine 2.7.3
-#Mon Sep 16 03:07:45 BRT 2024
-modified=yes
-tx_timestamp=1195
-version=2.7.3
+#HSQL Database Engine 2.7.0
+#Tue Sep 17 04:57:30 UTC 2024
+modified=no
+tx_timestamp=1417
+version=2.7.0
